# hostclr-hello

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_run.sh
ManagedLibrary/: Library.cs  ManagedLibrary.csproj
NativeHost/: build_host.sh  host.cpp
